[package]
name = "cloudflare-ddns-script"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
clap = { version = "4.5.37", features = ["derive"] }
toml = "0.8.20"
serde = { version = "1.0.219", features = ["derive"] }
cloudflare = { version = "0.14.0", features = ["blocking"] }
